# goofy-grove

./: README.md
server/: .gitignore  Cargo.toml  example_config.yml  goofy_grove.sqlite
server/src/: application.rs  infra.rs  main.rs
server/src/application/: auth.rs  person.rs  user.rs
server/src/core/: Cargo.toml
server/src/core/src/: application.rs  domain.rs
server/src/core/src/application/: auth.rs  person.rs
server/src/core/src/domain/: macros.rs  main.rs  validator.rs
server/src/core/src/domain/auth/: entities.rs
server/src/core/src/domain/event/: entities.rs
server/src/core/src/domain/person/: entities.rs
server/src/core/src/domain/user/: entities.rs
server/src/domain/: Cargo.toml
server/src/domain/src/: error.rs  lib.rs  macros.rs  main.rs  user.rs  validator.rs
server/src/domain/src/auth/: entities.rs  ports.rs
server/src/domain/src/person/: entities.rs
server/src/domain/src/user/: entities.rs  ports.rs
server/src/infra/: api.rs  config.rs  db.rs  event_bus.rs  id_generator.rs  jwt.rs  jwt_generators.rs  security.rs  socketio.rs
server/src/infra/api/: auth.rs  persons.rs  server.rs  users.rs
server/src/infra/config/: db_config.rs  jwt_config.rs
server/src/infra/db/: repositories.rs
server/src/infra/db/entities/: mod.rs  persons.rs  prelude.rs  users.rs
server/src/infra/db/migrations/: Cargo.toml
server/src/infra/db/repositories/: person.rs  user.rs
server/src/infra/event_bus/: handlers.rs
server/src/infra/jwt/: access_token.rs  refresh_token.rs  validator.rs
server/src/infra/jwt_generators/: refresh_token.rs
(+31 files in other folders)
