[workspace]
members = [".", "src/infra/db/migrations"]

[package]
name = "goofy-grove"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde_yaml = "0.9"
log = "0.4.29"
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
migration = { path = "src/infra/db/migrations" }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
sea-orm = { version = "2.0.0-rc", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "macros",
  "runtime-tokio-native-tls",
] }
