[workspace]
members = [".", "src/core", "src/infra/db/migrations"]

[package]
name = "goofy-grove"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde_yaml = "0.9"
log = "0.4.29"
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
migration = { path = "src/infra/db/migrations" }
gg_core = { path = "src/core" }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
sea-orm = { version = "2.0.0-rc", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "macros",
  "runtime-tokio-native-tls",
] }
argon2 = "0.5.3"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
chrono = "0.4.43"
serde_json = "1.0.149"

[dependencies.uuid]
version = "1.20.0"
# Lets you generate random UUIDs
features = ["v4"]
